2005-12-17  Philippe Khalaf  <burger@speedy.org> 

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_set_gst_timestamp):
		add queue delay to new segment as well (as opposed to just the first
		buffer). (bug #322347)

2005-12-16  Stefan Kost  <ensonic@users.sf.net>

	* ext/libvisual/visual.c: (make_valid_name):
          change some char* into char[]
	* gst/audiotestsrc/gstaudiotestsrc.c:
	(gst_audio_test_src_class_init), (gst_audio_test_src_do_seek),
	(gst_audio_test_src_create):
	* gst/audiotestsrc/gstaudiotestsrc.h:
          prepare to handle EOS and SEGMENT_DONE

2005-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/generic/states.c: (GST_START_TEST):
	  Blacklist cdparanoia element in state test.

2005-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/tcp/gsttcp.c:
	* gst/tcp/gsttcpclientsink.c:
	* gst/tcp/gsttcpserversink.c:
	* gst/tcp/gsttcpserversrc.c:
	  Add <string.h> includes for memset and FD_ZERO (fixes #323878;
	  patch by: Benjamin Pineau).

2005-12-15  Michael Smith  <msmith@fluendo.com>

	* gst/videorate/gstvideorate.c: (gst_video_rate_blank_data),
	(gst_video_rate_chain):
	  Fix timestamping for videorate when the first buffer it sees has a
	  non-zero timestamp. Fix some misleading debug output.

2005-12-15  Michael Smith  <msmith@fluendo.com>

	* gst/audioresample/gstaudioresample.c:
	  Don't leak all input buffers to audioresample.

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_collected):
	  Don't operate on empty text buffers. Strip newlines and
	  tabs only from the end of the text, but leave them intact
	  in the middle. Fix typo in gtk-doc description.

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybasebin.c:
	* gst/playback/gstplaybin.c: (handoff):
	  Make sure the video frame buffer we return to apps via the
	  "frame" property always has caps set on it. Modify