@@ -1,6 +1,13 @@
 2005-12-17  Philippe Khalaf  <burger@speedy.org> 
 
 	* gst-libs/gst/rtp/gstbasertpdepayload.c:
+	(gst_base_rtp_depayload_init), (gst_base_rtp_depayload_handle_sink_event):
+		Handle downstream newsegment by sending our own newsegment before the
+		next buffer to be released. (#323900)
+
+2005-12-17  Philippe Khalaf  <burger@speedy.org> 
+
+	* gst-libs/gst/rtp/gstbasertpdepayload.c:
 	(gst_base_rtp_depayload_set_gst_timestamp):
 		add queue delay to new segment as well (as opposed to just the first
 		buffer). (bug #322347)
